# backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-c2f293078c4e6aca65cc9641ccf917276bc45b9ad7f29fa1a1378f68e3d35045.json  query-cfef54dfd677344e2ea33f8f76afe46a123dc2a2d5713e57b3801b8e7061ac2f.json
configuration/: base.yaml
migrations/: 20241031225646_create_users_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs  verification.rs
src/routes/: generate.rs  health_check.rs  login.rs  mod.rs
