[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.9.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
env_logger = "0.9"
log = "0.4.22"
config = "0.14.0"
chrono = {version = "0.4.38", default-feautres = false, features = ["clock"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7"
actix-files = "0.6.6"
base64 = "0.22.1"
serde-aux = "4.5.0"
actix-cors = "0.7.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls", 
	"macros", 
	"postgres", 
	"uuid", 
	"chrono", 
	"migrate"
]
